# rusty-radio

./: .gitignore  LICENSE  README.md
hardware/button-board/: button_board.kicad_pcb  button_board.kicad_pro  button_board.kicad_sch
hardware/docs/: .~lock.ESP32-C3 Pinout Comparison.ods#  ESP32-C3 Pinout Comparison.ods
hardware/rotary-encoder/: rotary-encoder.kicad_pcb  rotary-encoder.kicad_pro  rotary-encoder.kicad_sch
hardware/schematic/: #auto_saved_files#  Adafruit-music-maker.bak  Adafruit-music-maker.kicad_sym  Espressif.kicad_sym  schematic.kicad_prl  schematic.kicad_pro  schematic.kicad_sch  sym-lib-table  ~schematic.kicad_sch.lck
hardware/schematic-xiao/: project.kicad_sym  schematic-xiao.kicad_pro  schematic-xiao.kicad_sch  sym-lib-table  xiao_esp32c3.kicad_sym
software/controller/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  TODO.md  build.rs  espflash.toml  rust-toolchain.toml
software/controller/.cargo/: config.toml
software/controller/cross/: Cargo.toml
software/controller/cross/app/: Cargo.toml  espflash.toml  tree
software/controller/cross/app/.cargo/: config.toml
software/controller/cross/app/src/: constants.rs  front_panel.rs  hardware.rs  initialized_peripherals.rs  main.rs  radio_stations.rs  read_stations.rs  sendable_multiplexer_driver.rs  spi_device_adapter.rs  spi_device_adapter.rsx  ui_commands.rs
software/controller/cross/app/src/task/: access_radio_stations.rs  button_monitor.rs  display_web_content.rs  mod.rs  play_music.rs  radio_stations.rs  read_test_music.rs  station_indicator.rs  stream.rs  stream2.rs  sync.rs  system_monitor.rs  test_button_board.rs  tuner.rs  tuner2.rs  tuner_deprecated.rs  wifi_connected_indicator.rs  wifi_tasks.rs
software/controller/cross/app/src/task/tuner/: mod.rs  tuning_scale.rs
software/controller/cross/radio/: Cargo.toml  espflash.toml
software/controller/cross/radio/.cargo/: config.toml
software/controller/cross/radio/src/: async_delay.rs  constants.rs  main.rs
software/controller/cross/radio/src/task/: mod.rs  receive_radio_control_commands.rs  station_indicator.rs  sync.rs  test_button_board.rs  wifi_connected_indicator.rs  wifi_tasks.rs
software/controller/cross/ui/: Cargo.toml
software/controller/cross/ui/src/: front_panel.rs  hardware.rs  main.rs  station_config.rs
software/controller/cross/ui/src/task/: mod.rs  sync.rs
software/controller/cross/ui/src/task/tuner/: mod.rs
software/controller/docs/: rusty-radio-comm-protocol.md  rusty-radio-control-protocol.md  uart_commands.bnf  uart_comms.md
software/controller/http/: Cargo.toml
software/controller/http-builder/: Cargo.toml
software/controller/http-builder/src/: error.rs  lib.rs  request.rs  request_builder.rsx
software/controller/http/src/: error.rs  lib.rs  request.rs  response.rs
software/controller/http/src/test_resources/: example_response.txt
software/controller/m3u/: Cargo.toml
software/controller/m3u/src/: lib.rs
software/controller/m3u/test_resources/: extended_m3u.m3u
software/controller/mcp23s17-async/: Cargo.toml  LICENSE  README.md
software/controller/mcp23s17-async/src/: lib.rs
software/controller/ra8875/: Cargo.toml
software/controller/ra8875/src/: lib.rs
software/controller/radio-control-protocol/: Cargo.toml
software/controller/radio-control-protocol/src/: lib.rs  radio_control_protocol.rs  uart_handler.rs
software/controller/radio-control-protocol/src/uart_handler/: command.rs
software/controller/radio-control-protocol/tests/: command_tests.rs  radio_control_protocol_tests.rs  uart_handler_tests.rs
software/controller/resources/: rr-stations.txt  stations.txt
software/controller/src/: main.rs  vs1053_driver.rs
software/controller/stations/: Cargo.toml
software/controller/stations/src/: lib.rs
software/controller/stations/tests/: integration_test.rs
software/controller/stations/tests/resources/: stations.txt  stations_with_presets.txt
software/controller/target-test/: Cargo.toml
software/controller/target-test/.cargo/: config.toml
software/controller/tests_XX/: basic_vs1053_driver_tests.rs
software/controller/uart-handler/: Cargo.toml
software/controller/uart-handler/src/: command.rs  error.rs  lib.rs
software/controller/uart-handler/tests/: command_tests.rs  uart_handler_tests.rs
software/controller/vs1053-driver/: Cargo.toml
software/controller/vs1053-driver/src/: dump_registers.rs  lib.rs  registers.rs
software/controller/xtask/: Cargo.toml
software/controller/xtask/src/: main.rs
