[package]
name    = "controller"
version = "0.1.0"
authors = ["Andrew Doble <andrew.l.doble@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = "0.6.2"
embassy-time = "0.3.2"
embedded-hal-async = "1.0.0"
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.4.0", features = [
    "esp32c3",
    "log",
    "integrated-timers",
] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }
portable-atomic = { version = "1.9.0", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
