[package]
name    = "controller"
version = "0.1.0"
authors = ["Andrew Doble <andrew.l.doble@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = "0.6.2"
embassy-time = "0.3.2"
embedded-hal-async = "1.0.0"
#embassy-net = {version = "0.4.0", features = ["proto-ipv4"]}
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "dns", "medium-ethernet", "dns", "medium-ip", "proto-ipv4"] }
embedded-io = "0.6.1"
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.4.0", features = [
    "esp32c3",
    "log",
    "integrated-timers",
] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.10.1", features = [
    "esp32c3",
    "wifi-default",
    "utils",
    "phy-enable-usb",
    "embassy-net",
    "async",
] }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
log = { version = "0.4.22" }
portable-atomic = { version = "1.9.0", default-features = false }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-net-driver = "0.2.0"
# See https://github.com/drogue-iot/reqwless/issues/93
reqwless = { version = "0.12.1" }
embassy-sync = "0.6.0"
embedded-nal-async = "0.8.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
