[package]
name = "target-test"
version = "0.1.0"
edition = "2021"



[dependencies]
embassy-executor = {version = "0.6.2", features = ["task-arena-size-24576"]}
embassy-time = "0.3.2"
embedded-hal-async = "1.0.0"
#embassy-net = {version = "0.4.0", features = ["proto-ipv4"]}
embassy-net = { version = "0.5.0", features = [ "tcp", "udp", "dhcpv4", "dns", "medium-ethernet", "dns", "medium-ip", "proto-ipv4"] }
embedded-io = "0.6.1"
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.22.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.5.0", features = [
    "esp32c3",
    "log",
    "integrated-timers",
] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
# esp-wifi = { version = "0.11.0", features = [
#     "esp32c3",
#     "wifi-default",
#     "utils",
#     "phy-enable-usb",
#     "embassy-net",
#     "async",
# ] }
esp-wifi = {version = "0.11.0", features = ["esp32c3", "wifi"]}

#static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-net-driver = "0.2.0"
#embassy-sync = "0.6.0"
embassy-sync = "0.6.1"

# Using older version.See https://github.com/drogue-iot/reqwless/issues/93
reqwless = "0.13.0"

embedded-nal-async = "0.8.0"
static_assertions = "1.1.0"
embedded-io-async = "0.6.1"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embassy-embedded-hal = "0.2.0"

static_cell = "2.1.0"


riscv-rt = "0.13.0"

vs1053-driver = {path = "../vs1053-driver"} 


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

