[package]
name = "uart-handler"
version = "0.1.0"
edition = "2024"

resolver = "2"

[dependencies]
embedded-hal-nb = "1.0.0"
heapless = "0.9.2"
itoa = "1.0.18"
nb = "1.1.0"
static_assertions = "1.1.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11", features = ["eh1", "embedded-hal-async"] }
#embedded-hal = "1.0.0"