[package]
name = "vs1053-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[dev-dependencies]
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-hal-mock = {version = "0.11.1", features= ["embedded-hal-async"]}
async-std = {version = "1.13.0", features = ["attributes"]}

