[package]
name    = "rusty-radio"
version = "0.0.5"
authors = ["Andrew Doble"]
edition = "2021"
license = "MIT OR Apache-2.0" 

[dependencies]
embassy-executor = { version = "0.7.0", features = [
    #"task-arena-size-24576",
    "task-arena-size-49152",  
    #"task-arena-size-65536",
    #"task-arena-size-81920",
    "arch-riscv32",

] }
embassy-time = "0.4.0"
embedded-hal-async = "1.0.0"
embassy-net = { version = "0.6.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "medium-ip",
    "proto-ipv4",
] }
embedded-io = { version = "0.6.1", default-features = false }
#esp-alloc = "0.6.0"
esp-alloc = {git = "https://github.com/esp-rs/esp-hal.git", tag = "v0.23.1"}
# esp-backtrace = { version = "0.15.0", features = [
#     "esp32c3",
#     "exception-handler",
#     "panic-handler",
#     "println",
# ] }

esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", tag = "v0.23.1", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
#esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable", "critical-section-single-core"] }
# Unstable feature is required for esp-wifi
# esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
#esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3", "unstable"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", tag = "v0.23.1", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", tag = "v0.23.1",features = [
    "esp32c3",
    "log",
    #"integrated-timers",
] }
#esp-println = { version = "0.13.0", features = ["esp32c3"] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", tag = "v0.23.1",features = ["esp32c3"] }
# esp-wifi    = { version = "0.12.0", features = ["esp32c3", "wifi"] }
#esp-wifi    = { version = "0.13.0", features = ["esp32c3", "wifi"] }
esp-wifi    = { git = "https://github.com/esp-rs/esp-hal.git", tag = "v0.23.1", features = ["esp32c3", "wifi"] }

static_cell        = "2.1.0"
embassy-net-driver = "0.2.0"
embassy-sync       = "0.6.1"
#embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embassy-embedded-hal = "0.3.0"


# Using older version.See https://github.com/drogue-iot/reqwless/issues/93
# After the update of embassy-hal to 0.23.1 can compile with the latest version 
# reqwless = "0.12.1"
#reqwless = "0.13.0"

embedded-nal-async = "0.8.0"
static_assertions  = "1.1.0"
embedded-io-async  = "0.6.1"

vs1053-driver = { path = "../../vs1053-driver" }
embedded-hal  = "1.0.0"# http-builder = { path = "../../http-builder" }

embedded-nal = "0.9.0"
httparse = {version = "1.10.1", default-features = false}

nourl = "0.1.4"
heapless = "0.8.0"

# Local libs
http = { path = "../../http" }
stations = {path = "../../stations"}
m3u = {path = "../../m3u"}
#mcp23s17-async = "0.1.0"
mcp23s17-async =  { path = "../../mcp23s17-async" }
periodic-map = {path = "../../periodic-map"}


[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = [
    "eh1",
    "embedded-hal-async",
] }
mock-embedded-io = "0.1.0"
#async-std = {version = "1.13.0", features = ["attributes"]}



# Profile moved to crate level
# TODO remove this commented out code. 
# [profile.dev]
# # Rust debug is too slow.
# # For debug builds always builds with some optimization
# opt-level = "s"

# [profile.release]
# codegen-units    = 1     # LLVM can perform better optimizations using a single thread
# debug            = 2
# debug-assertions = false
# incremental      = false
# lto              = 'fat'
# opt-level        = 's'
# overflow-checks  = false
