[package]
name    = "rusty-radio"
version = "0.0.8-s3"
authors = ["Andrew Doble"]
edition = "2021"
license = "MIT OR Apache-2.0" 

[dependencies]
# embassy-executor = { version = "0.7.0", features = [
#     #"task-arena-size-24576",
#     # Old
#     # "task-arena-size-49152",  
#     # This value is required with the number of tasks spawned.
#     "task-arena-size-65536",
#     #"task-arena-size-81920",
#     "arch-riscv32",

# ] }
# embassy-executor = { version = "0.9.0", features = [
#     #"task-arena-size-24576",
#     # Old
#     # "task-arena-size-49152",  
#     # This value is required with the number of tasks spawned.
#     # "task-arena-size-65536",
#     #"task-arena-size-81920",
#     #"arch-riscv32",

# ] }

embassy-executor = "0.9.0"

#embassy-time = "0.4.0"
embassy-time = "0.5.0"

embedded-hal-async = "1.0.0"

embassy-net = { version = "0.7.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "medium-ip",
    "proto-ipv4",
] }

embedded-io = { version = "0.6.1", default-features = false }

esp-backtrace = { version = "0.18.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }


#esp-hal = { version = "=1.0.0", features = ["esp32s3", "unstable"] }
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }


esp-rtos = { version = "0.2.0", features = ["esp32s3", "embassy", "esp-radio"] }

esp-alloc = {version = "0.9.0", features = ["esp32s3"]}

esp-println = { version = "0.16.0", features = ["esp32s3"] }

esp-radio = {version = "0.17.0", features = [
  "esp32s3",
  "wifi",
  #"esp-alloc",
 # "builtin-scheduler",
 # "smoltcp", 
] }


static_cell        = "2.1.0"
embassy-net-driver = "0.2.0"#

embassy-sync       = "0.7.0"

embassy-embedded-hal = "0.5.0"


# Using older version.See https://github.com/drogue-iot/reqwless/issues/93
# After the update of embassy-hal to 0.23.1 can compile with the latest version 
# reqwless = "0.12.1"
#reqwless = "0.13.0"

#embedded-nal-async = "0.8.0"
static_assertions  = "1.1.0"
embedded-io-async  = "0.6.1"

critical-section = "1.2.0"

vs1053-driver = { path = "../../vs1053-driver" }
embedded-hal  = "1.0.0"# http-builder = { path = "../../http-builder" }

embedded-nal = "0.9.0"
httparse = {version = "1.10.1", default-features = false}

nourl = "0.1.4"
heapless = "0.8.0"

# Local libs
http = { path = "../../http" }
stations = {path = "../../stations"}
m3u = {path = "../../m3u"}
ra8875 = {path = "../../ra8875"}

#mcp23s17-async = "0.1.0"
#mcp23s17-async =  { path = "../../mcp23s17-async" }

# See [issue 2](https://github.com/Fundevoge/mcp23s17-async/issues/2)
mcp23s17-async = { git = "https://github.com/Fundevoge/mcp23s17-async.git" }

periodic-map = {path = "../../periodic-map"}

reqwless = {version = "0.13.0", default-features = false}
embedded-graphics-core = "0.4.0"
embedded-graphics = "0.8.1"
esp-bootloader-esp-idf = {version = "0.4.0", features = ["esp32s3"]}
#reqwless = "0.12.1"

#nutype = { version = "0.6.1", default-features = false }


[features]
# Turning on this feature shows the statitics on reading a stream of data.
stats = []


[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = [
    "eh1",
    "embedded-hal-async",
] }
mock-embedded-io = "0.1.0"
#async-std = {version = "1.13.0", features = ["attributes"]}



# Profile moved to crate level
# TODO remove this commented out code. 
# [profile.dev]
# # Rust debug is too slow.
# # For debug builds always builds with some optimization
# opt-level = "s"

# [profile.release]
# codegen-units    = 1     # LLVM can perform better optimizations using a single thread
# debug            = 2
# debug-assertions = false
# incremental      = false
# lto              = 'fat'
# opt-level        = 's'
# overflow-checks  = false
