[package]
edition      = "2024"
name         = "ui"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c3", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["embassy", "esp32c3"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }

embassy-sync       = "0.7.0"
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = [] }
embassy-time     = "0.5.0"

critical-section = "1.2.0"
static_cell      = "2.1.1"
esp-println = { version = "0.16.1", features = ["esp32c3"] }

mcp23s17-async = { git = "https://github.com/Fundevoge/mcp23s17-async.git" }

# TODO bring this under the tuner and not as a seperate crate. It is much too lightweight
# to be a seperate crate. 
periodic-map = {path = "../../periodic-map"}


radio-control-protocol = {path = "../../radio-control-protocol"}

# [profile.dev]
# # Rust debug is too slow.
# # For debug builds always builds with some optimization
# opt-level = "s"

# [profile.release]
# codegen-units    = 1     # LLVM can perform better optimizations using a single thread
# debug            = 2
# debug-assertions = false
# incremental      = false
# lto              = 'fat'
# opt-level        = 's'
# overflow-checks  = false
